force-app/main/default/objects/Consortium__c/fields/Tier_D_Distributors_USD__c.field-meta.xml
<CustomField>
    <fullName>Tier_D_Distributors_USD__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Purpose: Indicates consortia sample price for emerging markets.
Team Responsibility: Pricing Specialist 
    Note: Only the label has been renamed, not the API name.</description>
    <inlineHelpText>Indicates consortia sample price in regional currency, not inclusive of distributor discount</inlineHelpText>
    <label>Tier D EMG USD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>