force-app/main/default/objects/Consortium__c/fields/Tier_D_EUR_EUR__c.field-meta.xml
<CustomField>
    <fullName>Tier_D_EUR_EUR__c</fullName>
    <description>Purpose: Indicates consortia sample Tier D price in regional currency
Team Responsibility: Pricing Specialist</description>
    <inlineHelpText>Indicates consortia sample Tier D price in regional currency</inlineHelpText>
    <label>Tier D EUR EUR</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>