force-app/main/default/objects/Consortium__c/validationRules/CheckBeadpoolExpirationIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBeadpoolExpirationIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Beadpool Expiration when Stage is Re-order.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageReOrder, 
    ISBLANK ( Beadpool_Expiration__c )   
)</errorConditionFormula>
    <errorDisplayField>Beadpool_Expiration__c</errorDisplayField>
    <errorMessage>Please provide Beadpool Expiration Date.</errorMessage>
</ValidationRule>