force-app/main/default/objects/Consortium__c/validationRules/CheckConsortiaPricingFieldsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckConsortiaPricingFieldsRequired</fullName>
    <active>true</active>
    <description>Prevents users from saving the record if any Consortia Pricing fields are blank when Consortia Stage is Re Order.</description>
    <errorConditionFormula>AND (
    TEXT ( Stage__c ) = $Label.ConsortiumStageReOrder,
    OR (
        ISBLANK ( C_Pricing_AMR_USD__c ),
        ISBLANK ( C_Pricing_ANZ_AUD__c ),
        ISBLANK ( C_Pricing_ANZ_NZD__c ),
        ISBLANK ( C_Pricing_ANZ_USD__c ),
	ISBLANK ( C_Pricing_CAD_CAD__c ),
        ISBLANK ( C_Pricing_CAD_USD__c ),
	ISBLANK ( C_Pricing_CNY_CNY__c ),
        ISBLANK ( C_Pricing_CNY_USD__c ),
	ISBLANK ( C_Pricing_Distributors_USD__c ),
        ISBLANK ( C_Pricing_EUR_GBP__c ),
	ISBLANK ( C_Pricing_EUR_USD__c ),
	ISBLANK ( C_Pricing_HKD_CNY__c ),
        ISBLANK ( C_Pricing_HKD_HKD__c ),
	ISBLANK ( C_Pricing_HKD_USD__c ),
	ISBLANK ( C_Pricing_JPY_JPY__c ),
        ISBLANK ( C_Pricing_JPY_USD__c ),
	ISBLANK ( C_Pricing_KRW_KRW__c ),
	ISBLANK ( C_Pricing_KRW_USD__c ),
	ISBLANK ( C_Pricing_SGD_SGD__c ),
        ISBLANK ( C_Pricing_SGD_USD__c )
    )
)</errorConditionFormula>
    <errorMessage>All Consortium Pricing fields are required in Re-Order Stage.</errorMessage>
</ValidationRule>