force-app/main/default/objects/Consortium__c/validationRules/CheckConsortiumChipNameIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckConsortiumChipNameIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Consortium Chip Name when Stage is Re-order.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageReOrder, 
    ISBLANK ( Consortium_Chip_Name__c )   
)</errorConditionFormula>
    <errorDisplayField>Consortium_Chip_Name__c</errorDisplayField>
    <errorMessage>Please provide Consortium Chip Name.</errorMessage>
</ValidationRule>