force-app/main/default/objects/Consortium__c/validationRules/CheckNoOfTotalSNPsInBpmIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNoOfTotalSNPsInBpmIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Number of total SNPs in bpm when Stage is Re-order.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageReOrder, 
    ISBLANK ( Number_Of_Total_SNPs_In_BPM__c )   
)</errorConditionFormula>
    <errorDisplayField>Number_Of_Total_SNPs_In_BPM__c</errorDisplayField>
    <errorMessage>No. of Total SNPs in bpm cannot be empty for the Reorder Stage.</errorMessage>
</ValidationRule>