force-app/main/default/objects/Consortium__c/validationRules/CheckTierANotMultipleOf48.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTierANotMultipleOf48</fullName>
    <active>true</active>
    <description>Prevents users from saving the Consortium record if the Tier A Samples value is not a multiple of 48 when stage is Initial Sale.</description>
    <errorConditionFormula>AND (
    TEXT ( Stage__c ) = $Label.ConsortiumStageInitialSale,
    MOD ( Tier_A_Samples__c , 48 ) &lt;&gt; 0
)</errorConditionFormula>
    <errorDisplayField>Tier_A_Samples__c</errorDisplayField>
    <errorMessage>Tier A samples must be a multiple of 48.</errorMessage>
</ValidationRule>