force-app/main/default/objects/Consortium__c/validationRules/CheckTierASamplesIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTierASamplesIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Tier A Samples when Stage is Initial Sale.</description>
    <errorConditionFormula>AND (
    TEXT ( Stage__c ) = $Label.ConsortiumStageInitialSale,
    ISBLANK ( Tier_A_Samples__c )
)</errorConditionFormula>
    <errorDisplayField>Tier_A_Samples__c</errorDisplayField>
    <errorMessage>Please provide Tier A Samples information.</errorMessage>
</ValidationRule>