force-app/main/default/objects/Consortium__c/validationRules/CheckTierBSamplesIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTierBSamplesIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Tier B Samples when Stage is Initial Sale.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageInitialSale, 
    ISBLANK ( Tier_B_Samples__c ) 
)</errorConditionFormula>
    <errorDisplayField>Tier_B_Samples__c</errorDisplayField>
    <errorMessage>Please provide Tier B Samples information.</errorMessage>
</ValidationRule>