force-app/main/default/objects/Consortium__c/validationRules/CheckTierCNotMultipleOf48.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTierCNotMultipleOf48</fullName>
    <active>true</active>
    <description>Prevents users from saving the Consortium record if the Tier C Samples value is not a multiple of 48 when stage is Initial Sale.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageInitialSale, 
    MOD ( Tier_C_Samples__c , 48 ) &lt;&gt; 0 
)</errorConditionFormula>
    <errorDisplayField>Tier_C_Samples__c</errorDisplayField>
    <errorMessage>Tier C samples must be a multiple of 48.</errorMessage>
</ValidationRule>