force-app/main/default/objects/Consortium__c/validationRules/CheckTierCSamplesIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTierCSamplesIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Tier C Samples when Stage is Initial Sale.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageInitialSale, 
    ISBLANK ( Tier_C_Samples__c ) 
)</errorConditionFormula>
    <errorDisplayField>Tier_C_Samples__c</errorDisplayField>
    <errorMessage>Please provide Tier C Samples information.</errorMessage>
</ValidationRule>