force-app/main/default/objects/Consortium__c/validationRules/CheckTierDSamplesIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTierDSamplesIsNotBlank</fullName>
    <active>true</active>
    <description>Prevents users from creating or editing Consortium records without Tier D Samples when Stage is Initial Sale.</description>
    <errorConditionFormula>AND ( 
    TEXT ( Stage__c ) = $Label.ConsortiumStageInitialSale, 
    ISBLANK ( Tier_D_Samples__c ) 
)</errorConditionFormula>
    <errorDisplayField>Tier_D_Samples__c</errorDisplayField>
    <errorMessage>Please provide Tier D Samples information.</errorMessage>
</ValidationRule>