force-app/main/default/objects/Consortium__c/validationRules/CheckUniqueConsortiumName.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckUniqueConsortiumName</fullName>
    <active>true</active>
    <description>Prevent users from creating consortium records with duplicate consortium names.</description>
    <errorConditionFormula>AND(
    LOWER(VLOOKUP( $ObjectType.Consortium__c.Fields.Name , $ObjectType.Consortium__c.Fields.Name, Name)) = LOWER(Name),
    VLOOKUP( $ObjectType.Consortium__c.Fields.Id , $ObjectType.Consortium__c.Fields.Name, Name) &lt;&gt; Id
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>A consortium with the same name already exists.</errorMessage>
</ValidationRule>