force-app/main/default/objects/Consortium__c/listViews/Expired_Cancelled_Consortia.listView-meta.xml
<ListView>
    <fullName>Expired_Cancelled_Consortia</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Open_Closed_Consortium__c</columns>
    <columns>Category__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Species__c</columns>
    <columns>Is_Volume_Left__c</columns>
    <columns>Consortium_Chip_Name__c</columns>
    <columns>Beadpool_Expiration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Cancelled,Expired</value>
    </filters>
    <label>Expired/Cancelled Consortia</label>
</ListView>